--- a/test.ipynb
+++ b/test.ipynb
@@ -178,6 +178,7 @@
     "    'developer_project_name':'developer_project_name',\n",
     "    'listing_floor_number':'listing_floor_number',\n",
     "    'trakheesi_start':'trakheesi_start',\n",
+    "    'trakheesi_start':'trakheesi_start',\n",
     "    'trakheesi_end':'trakheesi_end',\n",
     "    'is_qr_code_link_available':'is_qr_code_link_available',\n",
     "    'regulatory_status':'regulatory_status',\n",
