--- a/test2.ipynb
+++ b/test2.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -88,7 +88,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.image as mpimg\n",
-    "img=mpimg.imread('bentley-bear.jpeg')\n",
+    "img=mpimg.imread('bentley-bears.jpeg')\n",
     "plt.imshow(img)\n",
     "plt.axis('off')\n",
     "plt.colorbar()"
